--- a/index.html
+++ b/index.html
@@ -1,74 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>
-	A Journey Into the Unknown Web Design!
-</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+	<title>A Journey into the Web</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" type="text/css" href="css/indexStyle.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 </head>
+
 <body>
-	<h2><strong><br>From Humble Beginnings to.......</strong></h2>
+	<section class="main-texts">
+		<h2><strong><br>From Humble Beginnings to.......</strong></h2>
 
-	<p> 
-		...a self-taught average software programmer. We had all but one class asynchronous! Nothing made sense in the beginning...<em>and</em>
-	 or <em>or</em>?<br>
-	 <em>while</em> loop or a <em>for</em> loop? What were they? How to even differentitate between such logic? While my head was being busy dissecting<br> these logics, the <em>supply and demand factors</em> were battering my head against a thick, wooden door! What was the cherry on top you ask?<br> A regular, 40-hours full-time job! 
+		<p>
+			...a self-taught average software programmer. We had all but one class asynchronous! Nothing made sense in
+			the
+			beginning...<em>and</em>
+			or <em>or</em>?<br>
+			<em>while</em> loop or a <em>for</em> loop? What were they? How to even differentitate between such logic?
+			While
+			my head was being busy dissecting<br> these logics, the <em>supply and demand factors</em> were battering my
+			head
+			against a thick, wooden door! What was the cherry on top you ask?<br> A regular, 40-hours full-time job!
 
-	 But we all knew, the moment we stepped foot onto the mud, we weren't leaving until we got our clothes <br>dirty!
-	 This was in Fall of 2019. Back when we were still new into the states and hated everything here! Missing my friends back home, the<br> memories, the bond... What killed it even more was the fact of having to wait 2 years minimum before enrolling at a community college.<br> Ofcourse one could enroll the day they step into U.S., but goodluck paying 2-3 times the amount as an international student.   
+			But we all knew, the moment we stepped foot onto the mud, we weren't leaving until we got our clothes
+			<br>dirty!
+			This was in Fall of 2019. Back when we were still new into the states and hated everything here! Missing my
+			friends back home, the<br> memories, the bond... What killed it even more was the fact of having to wait 2
+			years
+			minimum before enrolling at a community college.<br> Ofcourse one could enroll the day they step into U.S.,
+			but
+			goodluck paying 2-3 times the amount as an international student.
 
+			<img src="images/lol.jpg" class="img-fluid" alt="troll_image" style="width:110px; height: 30px">
 
-	 <img src="images/lol.jpg" alt="troll_image" style="width:110px; height: 30px">
+			<br>Well, my first high-level programming level was <em>Python 3.x</em>We were taught the generics of
+			programming
+			but had to code in that language.<br>For example, the book; <em>Logic Structres and ALgorithm Design</em>,
+			covered
+			how to devise an alogorithm, what they were along with generics of <br> flowchart designs. These were just
+			the
+			blueprints of a program, the real deal was the source code which we had to write in python. Stuff slowly
+			<br>
+			started making sense once we devoted our time in gathering information from various sources (thank you
+			Youtube!),
+			just as I am doing now for <br>this web development
+			language right now! <br>
+			<img src="images/TQ.jpeg" class="img-fluid" alt="thank you" style="width: 100px; height: 80px">
 
-	 <br>Well, my first high-level programming level was <em>Python 3.x</em>We were taught the generics of programming but had to code in that language.<br>For example, the book; <em>Logic Structres and ALgorithm Design</em>, covered how to devise an alogorithm, what they were along with generics of <br> flowchart designs. These were just the blueprints of a program, the real deal was the source code which we had to write in python. Stuff slowly <br> started making sense once we devoted our time in gathering information from various sources (thank you Youtube!), just as I am doing now for <br>this web development
-	 language right now! <br>
-	 <img src="images/TQ.jpeg" alt="thank you" style="width: 100px; height: 80px">
+		</p>
+	</section>
 
-	</p>
+	<section class="photos">
+		<h3><strong>These are the programming languages that I have learnt over the course of 2 years:</strong></h3>
 
-	<h3><strong>These are the programming languages that I have learnt over the course of 2 years:</strong></h3>
-
-	<div id="laguages">
-	<p>
+		<p>
 		<ul>
 			<li>
-				<img src="images/python.png" alt="python_logo" width="20px" height="20px"> Python 3 [Structured Programming] 
+				<img src="images/python.png" alt="python_logo"> Python 3 [Structured Programming]
 				<!--<a href="python.html"> Python 3 [Structured Programming] </a> -->
 			</li>
 
 			<li>
-				<img src="images/c++.png" alt="C++_logo" width="20px" height="20px"> C++ [Structured Programming]
+				<img src="images/c++.png" alt="C++_logo"> C++ [Structured Programming]
 			</li>
 
 			<li>
-			<img src="images/c++.png" alt="C++_logo" width="20px" height="20px"> C++ [Object Oriented Programming]
+				<img src="images/c++.png" alt="C++_logo"> C++ [Object Oriented Programming]
 			</li>
 
 			<li>
-				<img src="images/cSharp.png" alt="C#_logo" width="20px" height="20px"> C# [Object Oriented Programming]
+				<img src="images/cSharp.png" alt="C#_logo"> C# [Object Oriented Programming]
 			</li>
 
 			<li>
-				<img src="images/java.jpg" alt="java_logo" width="20px" height="20px"> Java [Object Oriented Programming]
+				<img src="images/java.jpg" alt="java_logo"> Java [Object Oriented Programming]
 			</li>
 
 			<li>
-				<img src="images/asm.gif" alt="assembly_logo" width="20px" height="20px"> Intel 8086 Assembly
+				<img src="images/asm.gif" alt="assembly_logo"> Intel 8086 Assembly
 			</li>
 
 		</ul>
-	</p>
-	</div>
-	
-	<h2 class="inProgress">
-		HTML, CSS & JS, in progress....
-	</h2>
+		</p>
+	</section>
 
-<br><br>
-	<div class="end"> <a href="about/about.html"> About  </div>
-	<div class="end"> <a href="bio/bio.html">My Bio </div>
-	<div class="end"> <a href="languages/languages.html">Where to from here? </div>
+	<section class="inProgress">
+		<h2> HTML, CSS & JS, in progress....</h2>
+	</section>
+
+	<div class="end"><br><br>
+		<button class="btn btn-primary rounded-pill"><a href="bio/bio.html" class="extends"> About </a></button>
+		<button class="btn btn-primary rounded-pill"><a href="bio/bio.html" class="extends"> My Bio </a></button>
+		<button class="btn btn-primary rounded-pill"><a href="languages/languages.html" class="extends"> Where to from
+				here?
+			</a></button>
+	</div>
 
 </body>
+
 </html>
