--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</section>
 
 	<div class="end"><br><br>
-		<button class="btn btn-primary rounded-pill"><a href="bio/bio.html" class="extends"> About </a></button>
+		<button class="btn btn-primary rounded-pill"><a href="about/about.html" class="extends"> About </a></button>
 		<button class="btn btn-primary rounded-pill"><a href="bio/bio.html" class="extends"> My Bio </a></button>
 		<button class="btn btn-primary rounded-pill"><a href="languages/languages.html" class="extends"> Where to from
 				here?
